# apertus-swiss-eval

./: .gitignore  METHODOLOGY.md  README.md  _v2_results.json  answer_source.gbnf  constrained_cite.py  recall_diag.py
finma/: .gitignore  README.md  pyproject.toml
finma/data/: checksums.json  manifest.json
finma/report/: B_base-q4km.jsonl  C_finma-q4km.jsonl  D_finma-q4km.jsonl  REPORT.md
finma/report/runs/: A_base-q4km.jsonl  C_finma-v2.jsonl  D_finma-v2.jsonl
finma/scripts/: assemble_tasks.py  build_sft.py  download_corpus.py  extract_text.py  run_eval.py  score_run.py
finma/src/finma_eval/: corpus.py  prompts.py  scoring.py
finma/tasks/: GUIDELINES.md  eval_v1.jsonl  sft_exclusions.json  sft_train.jsonl  sft_val.jsonl
finma/tasks/drafts/: 2010-01_de.json  2010-01_en.json  2011-01_de.json  2013-08_de.json  2013-08_en.json  2016-07_de.json  2016-07_en.json  2017-01_en.json  2018-03_de.json  2018-03_en.json  2019-01_de.json  2023-01_de.json  2023-01_en.json  2025-01_de.json  2025-04_de.json  2025-04_en.json
finma/tasks/sft_drafts/: 2010-01_de.json  2010-01_en.json  2011-01_de.json  2013-08_de.json  (+12 more)
finma/train/: sft_lora.py
vvg/: .gitattributes  README.md  pyproject.toml
vvg/configs/: apertus_chat_template.jinja
vvg/data/: checksums.json  manifest.json
vvg/report/: REPORT.md  ablation.json  ablation_v2.json  meta.json
vvg/scripts/: assemble_tasks.py  build_sft.py  download_corpus.py  extract_articles.py  gen_sft_topics.py  make_slices.py  run_eval.py  score_run.py
vvg/tasks/: eval_v1.jsonl  sft_exclusions.json  sft_train.jsonl  sft_val.jsonl
(+246 files in other folders)
